--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,5 @@
-<div [ngClass]="{'flip-card': isClicked}" class="card bg-gray-300 flex flex-col items-center shadow-lg rounded p-1">
+<div [ngClass]="{'flip-card': isClicked}"
+    class="card bg-gray-300 flex flex-col items-center shadow-lg rounded p-1 transform transition ease-in-out md:hover:scale-105">
     <div class="card-inner">
         <div class="card-front flex flex-col items-center">
             <h1 class="text-lg font-bold">{{data.name}}</h1>
