--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,18 @@
-
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-/* You can add global styles to this file, and also import other style files */
+
+html {
+    overflow-y: scroll;
+    scrollbar-width: none;
+    height: 100%;
+}
+
+::-webkit-scrollbar{
+    width: 0px;
+    height: 0px;
+}
+
+body {
+    min-height: 100%;
+}
